Fixed docs and changed LICENSE
